--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -75,8 +75,8 @@
                 <h2>We can cater our services to your needs</h2>
              </div>
             </div>
-             <div class="row left">
-             <div class="col-md-4">
+             <div class="row left justify-content-md-center">
+             <div class="col-md-3">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -111,7 +111,7 @@
                   </div>
                 </div>
                 </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -137,7 +137,7 @@
                   </div>
                 </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-3">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -166,8 +166,8 @@
                 </div>
              </div>
              </div>
-            <div class="row left">
-             <div class="col-md-4">
+            <div class="row left justify-content-md-center">
+             <div class="col-md-3">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -196,7 +196,7 @@
                   </div>
                 </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -224,7 +224,7 @@
                   </div>
                 </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-3">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -240,7 +240,6 @@
   </g>
   <rect id="Rectangle_4941" data-name="Rectangle 4941" width="48" height="48" fill="none" opacity="0"/>
 </svg>
-
                       </div>
                    </div>
                    <div class="col-md-6">
