--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -8,10 +8,10 @@
        </div>
     </div>
     <div class="cater">
-            <div class="row left">
-               <div class="col-md-5">
+            <div class="row left d-flex flex-row bd-highlight mb-3">
+               <div class="col-md-4">
                   <div class="row types">
-                     <div class="col-md-7">
+                     <div class="col-md-6">
                         <h2>15 +</h2>
                      </div>
                      <div class="col-md-3">
@@ -19,13 +19,13 @@
                      </div>
                   </div>
                  </div>
-           <div class="col-md-5">
+           <div class="col-md-4">
                <div class="row types">
-                  <div class="col-md-6">
+                  <div class="col-md-5">
                      <h2>7 +</h2>
                   </div>
                   <div class="col-md-4">
-                     <h4>Years of Service</h4>
+                     <h4>Years of <br>Service</h4>
                   </div>
                </div>
               </div>
