--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -40,13 +40,13 @@
     }
 }
 .cater{
-    background-color: #FCFCFC;
-    margin-top: -25%;
+   // background-color: #FCFCFC;
+    margin-top: -27%;
     color: #FFF;
     height: 250px;
     h2{
-        font-size: 92px;
-        font-family: Inter;
+        font-size: 82px;
+        font-family: Muli;
         color: #C3343C;
     }
     h4{
@@ -54,13 +54,13 @@
         font-family: Muli;
         color: #3B3B3B;
         line-height: 36px;
-        padding-top: 10px;
+        padding-top: 15px;
+        //margin-left: -50px;
     }
     .types{
-        background-color: #FFFFFF;
+       // background-color: #FFFFFF;
         cursor: pointer;
-        margin-bottom: 50px;
-        margin-left: 100px;
+        margin-left: 50px;
     }
     @include media-breakpoint-down(lg){
         .types{
