--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -27,7 +27,7 @@ h6{
 } 
     .banner{
         background-color: #6DAFD8;
-        padding-top: 140px;
+        //padding-top: 140px;
        position: relative;
        //height: 830px;
        //padding: 350px 0px;
